# USV_VRX

./: .~lock.waypoint_log.csv#  readme.txt  waypoint_log.csv
install/: local_setup.sh  setup.sh
install/include/px4_uv/px4_uv/msg/: action.h  action.hpp  mission_info.h  mission_info.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h  task.h  task.hpp  task_info.h  task_info.hpp  uv_state.h
install/include/px4_uv/px4_uv/msg/detail/: action__builder.hpp  action__functions.c  action__rosidl_typesupport_fastrtps_cpp.hpp  action__rosidl_typesupport_introspection_cpp.hpp  action__struct.h  action__struct.hpp  action__traits.hpp  action__type_support.c  action__type_support.cpp  mission_info__builder.hpp  mission_info__functions.c  mission_info__functions.h  mission_info__rosidl_typesupport_fastrtps_c.h  mission_info__rosidl_typesupport_fastrtps_cpp.hpp  mission_info__rosidl_typesupport_introspection_c.h  mission_info__rosidl_typesupport_introspection_cpp.hpp  mission_info__struct.h  mission_info__struct.hpp  mission_info__traits.hpp  mission_info__type_support.c  mission_info__type_support.cpp  mission_info__type_support.h  mission_info__type_support.hpp  task__builder.hpp  task__functions.c  task__functions.h  task__rosidl_typesupport_fastrtps_c.h  task__rosidl_typesupport_fastrtps_cpp.hpp  task__rosidl_typesupport_introspection_c.h  task__rosidl_typesupport_introspection_cpp.hpp  task__struct.h  task__struct.hpp  task__traits.hpp  task__type_support.c  task__type_support.cpp  task__type_support.h  task__type_support.hpp  task_info__builder.hpp  task_info__functions.c  task_info__functions.h  (+21 more)
install/lib/mission_manager/: mission_manager
install/lib/multi_usv_ctrl/: multi_usv_pid_controller
install/lib/vrx_ros/: pose_tf_broadcaster
install/local/lib/python3.10/dist-packages/px4_uv/: _px4_uv_s.ep.rosidl_typesupport_c.c  _px4_uv_s.ep.rosidl_typesupport_fastrtps_c.c  _px4_uv_s.ep.rosidl_typesupport_introspection_c.c
install/local/lib/python3.10/dist-packages/px4_uv-0.0.1-py3.10.egg-info/: PKG-INFO  SOURCES.txt
install/local/lib/python3.10/dist-packages/px4_uv/msg/: __init__.py  _action.py  _action_s.c  _mission_info.py  _mission_info_s.c  _task.py  _task_info.py  _task_info_s.c  _task_s.c
install/share/ament_index/resource_index/package_run_dependencies/: vrx_gz
install/share/ament_index/resource_index/parent_prefix_path/: wamv_gazebo
install/share/ament_index/resource_index/rosidl_interfaces/: px4_uv
install/share/mission_manager/: package.dsv  package.ps1  package.sh
install/share/multi_usv_ctrl/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/share/px4_uv/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/share/px4_uv/cmake/: ament_cmake_export_include_directories-extras.cmake  export_px4_uv__rosidl_generator_cExport-noconfig.cmake  export_px4_uv__rosidl_generator_cExport.cmake  export_px4_uv__rosidl_generator_pyExport.cmake  export_px4_uv__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_px4_uv__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  px4_uv__rosidl_typesupport_cExport.cmake  px4_uv__rosidl_typesupport_cppExport-noconfig.cmake  px4_uv__rosidl_typesupport_introspection_cppExport-noconfig.cmake  rosidl_cmake-extras.cmake
install/share/px4_uv/msg/: Action.idl  Action.msg  MissionInfo.idl  Task.idl  Task.msg  TaskInfo.idl
install/share/vrx_gazebo/: package.sh
install/share/vrx_gazebo/models/wamv/tmp/: model.urdf
install/share/vrx_gazebo/models/wamv_2/tmp/: model.urdf
install/share/vrx_gazebo/models/wamv_3/tmp/: model.urdf
install/share/vrx_gazebo/models/wamv_4/tmp/: model.urdf
install/share/vrx_gazebo/models/wamv_5/tmp/: model.urdf
install/share/vrx_gazebo/models/wamv_6/tmp/: model.urdf
install/share/vrx_gazebo/models/wamv_7/tmp/: model.urdf
install/share/vrx_gazebo/models/wavm_1/tmp/: model.urdf
install/share/vrx_gz/: package.sh
install/share/vrx_gz/launch/: competition.launch.py
install/share/vrx_gz/worlds/: sydney_regatta.sdf  test.sdf
install/share/vrx_ros/: package.sh
install/share/wamv_description/: package.sh
install/share/wamv_description/environment/: resource_paths.dsv
install/share/wamv_gazebo/: package.sh
install/share/wamv_nav/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/share/wamv_nav/launch/: competition.launch.py
log/: latest_build
src/mission_manager/: package.xml  setup.py
src/multi_usv_ctrl/: package.xml  setup.cfg  setup.py
src/px4_uv/: CMakeLists.txt  package.xml
src/px4_uv/msg/: Action.msg  MissionInfo.msg  TaskInfo.msg  UvState.msg
src/vrx/vrx_gz/: CMakeLists.txt
src/vrx/vrx_gz/launch/: competition.launch.py  spawn_wamv_multi.launch.py
src/vrx/vrx_gz/nodes/: my_controller.py
src/vrx/vrx_gz/worlds/: sydney_regatta.sdf
src/wamv_nav/: package.xml  setup.cfg  setup.py
src/wamv_nav/resource/: wamv_nav
