<?xml version="1.0"?>
<package format="3">
  <name>multi_usv_ctrl</name>
  <version>0.1.0</version>
  <description>N-boat PID controller sending each WAM-V to its goal point.</description>

  <maintainer email="kjoon0807@gm.gist.ac.kr">kjoon</maintainer>
  <license>MIT</license>

  <!-- ───────── runtime & build dependencies ───────── -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <!-- ───────── test helpers (optional) ───────── -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

